force-app/main/default/objects/Action_Item_Role__c/Action_Item_Role__c.object-meta.xml
<CustomObject>
    <label>Cruelty Report Contact Role</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>CR Role #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cruelty Report Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>