force-app/main/default/objects/Action_Item_Role__c/fields/Action_Item__c.field-meta.xml
<CustomField>
    <fullName>Action_Item__c</fullName>
    <label>Cruelty Report</label>
    <referenceTo>Action_Item__c</referenceTo>
    <relationshipName>Action_Item_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>