force-app/main/default/objects/Action_Item_Role__c/fields/Complainant_wishes_to_remain_anonymous__c.field-meta.xml
<CustomField>
    <fullName>Complainant_wishes_to_remain_anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keep Confidential</label>
    <type>Checkbox</type>
</CustomField>