force-app/main/default/objects/Action_Item_Role__c/fields/Formatted_Role__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Role__c</fullName>
    <formula>IF(Complainant_wishes_to_remain_anonymous__c = TRUE, &quot;Complainant (Anonymous)&quot;, TEXT (Role__c))</formula>
    <label>Role</label>
    <type>Text</type>
</CustomField>