force-app/main/default/objects/Action_Item_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Contact/Relative</fullName>
            </value>
            <value>
                <fullName>Animal Discharge Contact</fullName>
            </value>
            <value>
                <fullName>Animal Owner</fullName>
            </value>
            <value>
                <fullName>Complainant</fullName>
            </value>
            <value>
                <fullName>County/Civil Attorney</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Officer</fullName>
            </value>
            <value>
                <fullName>Placement Shelter Contact</fullName>
            </value>
            <value>
                <fullName>Prosecutor</fullName>
            </value>
            <value>
                <fullName>Public Information Officer (PIO)</fullName>
            </value>
            <value>
                <fullName>Receiving Shelter Contact</fullName>
            </value>
            <value>
                <fullName>Subject</fullName>
            </value>
            <value>
                <fullName>Witness</fullName>
            </value>
            <value>
                <fullName>Subject/Defendant</fullName>
                <isActive>false</isActive>
                <label>Subject/Defendant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>